AWA-8 fixed flexbox layout issue in header

--- a/web/app/themes/adopted/assets/sass/styles/header.sass
+++ b/web/app/themes/adopted/assets/sass/styles/header.sass
@@ -11,7 +11,7 @@
 
 		.adpt-nav-logo
 			height: 100%
-			flex: 1
+			flex: 0
 
 			img
 				width: auto
@@ -23,9 +23,6 @@
 
 			ul
 				display: flex
-
-			li
-				flex: 1
 
 	.adpt-header-apps
 		flex: 1
